# lightec

./: .gitmodules  CMakeLists.txt  README.md
bundles/lightec_service/: CMakeLists.txt
bundles/lightec_service/src/: led_service_activator.c  led_service_impl.c  led_service_impl.h
conf/: bblayers.conf  local.conf
doc/diagram/: component_diagram.md
metas/meta-lightec/: README  README.md
metas/meta-lightec/conf/: layer.conf
metas/meta-lightec/recipes-celix/celix/: celix.bb
metas/meta-lightec/recipes-celix/celix/celix/: 0001-Remove-Werror-flag.patch  0002-Update-to-Generate-Shared-Library-Version.patch
metas/meta-lightec/recipes-lightec/lightec/: lightec.bb  lightec_1.0.0.bb
metas/meta-lightec/recipes-lightec/lightec-service/: lightec-service.bb
metas/meta-lightec/recipes-lightec/lightec-service/lightec-service/: lightec.service  lightec.sh
